Fix there always being a scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,7 @@
 
 .navbar{
   width: 100%;
-  height: 32px;
-  margin: 16px 0;
+  height: 64px;
   padding: 0 24px;
   box-sizing: border-box;
   display: flex;
